src/objects/mkto_si__BestBetsCache__c.object
<CustomObject>
    <fields>
        <fullName>mkto_si__AccountLinkName__c</fullName>
        <label>AccountLinkName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__AccountLink__c</fullName>
        <label>AccountLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__BestBetsView__c</fullName>
        <label>BestBetsView</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactId__c</fullName>
        <label>ContactId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactLink__c</fullName>
        <label>ContactLink</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>mkto_si__ContactName__c</fullName>
        <label>ContactName</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Id__c</fullName>
        <label>Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__LIMDate__c</fullName>
        <label>LIMDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>mkto_si__LIMDesc__c</fullName>
        <label>LIMDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__LIMType__c</fullName>
        <label>LIMType</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__LeadScore__c</fullName>
        <label>LeadScore</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Priority__c</fullName>
        <label>Priority</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__RelativeScore__c</fullName>
        <label>RelativeScore</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__RowNum__c</fullName>
        <label>RowNum</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__SObjectType__c</fullName>
        <label>SObjectType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>User</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>mkto_si__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__TotalCount__c</fullName>
        <label>TotalCount</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mkto_si__Urgency__c</fullName>
        <label>Urgency</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>BestBetsCache</label>
    <nameField>
        <label>BestBetsVO__c Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BestBetsCache</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>